--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "chalk": "^5.4.1"
+    "chalk": "^5.4.1",
+    "nodemon": "^3.1.9"
   },
   "dependencies": {
     "dotenv": "^16.4.7"
