--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
   "name": "chalk-logger",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "logger.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon index.js"
+    "start": "node logger.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "keywords": [
+    "chalk",
+    "logger",
+    "chalk-logger",
+    "nodejs-logger"
+  ],
+  "author": "Faizan Ejaz Shaikh",
+  "license": "MIT",
+  "description": "A simple, lightweight development logger for Node.js using chalk.",
   "devDependencies": {
-    "chalk": "^5.4.1",
-    "nodemon": "^3.1.9"
+    "chalk": "^5.4.1"
   },
   "dependencies": {
     "dotenv": "^16.4.7"
